--- a/public/templates/tab-timesheet.html
+++ b/public/templates/tab-timesheet.html
@@ -1,13 +1,13 @@
 <ion-view view-title="Innsa Timesheet">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/timesheet/{{chat.id}}">
-                <img ng-src="{{chat.face}}">
-                <h2>{{chat.name}}</h2>
-                <p>{{chat.lastText}}</p>
-                <span class="badge badge-assertive badge-logwork">2h</span>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="worklog in worksLogs" type="item-text-wrap" href="#/tab/timesheet/{{worklog.key}}">
+                <img ng-src="{{worklog.userAvatar}}">
+                <h2>{{worklog.dayNumber}}</h2>
+                <p>{{worklog.date}}</p>
+                <span class="badge badge-assertive badge-logwork">{{worklog.totalWorkLogged}}</span>
                 <i class="icon ion-chevron-right icon-accessory"></i>
-                <ion-option-button class="button-assertive" ng-click="remove(chat)">
+                <ion-option-button class="button-assertive" ng-cldick="remove(worklog)">
                     Delete
                 </ion-option-button>
             </ion-item>
