--- a/public/templates/timesheet-detail.html
+++ b/public/templates/timesheet-detail.html
@@ -2,21 +2,21 @@
 <ion-view view-title="{{chat.name}}">
     <ion-content class="padding">
         <ion-list>
-            <div ng-repeat="group in groups">
-                <ion-item class="item-stable element-relative" ng-click="toggleGroup(group)" ng-class="{active: isGroupShown(group)}">
-                    <i class="icon" ng-class="isGroupShown(group) ? 'ion-chevron-up' : 'ion-chevron-down'"></i> &nbsp;
-                    <i class="ion-bug"></i>&nbsp; MANRMTOOLS- {{group.name}}254
+            <div ng-repeat="issue in issues">
+                <ion-item class="item-stable element-relative" ng-click="toggleGroup(issue)" ng-class="{active: isGroupShown(issue)}">
+                    <i class="icon" ng-class="isGroupShown(issue) ? 'ion-chevron-up' : 'ion-chevron-down'"></i> &nbsp;
+                    <i class="ion-bug"></i>&nbsp; {{issue.key}}
                     <button class="button button-small button-balanced icon-left ion-paper-airplane btn-log">Save</button>
-                    <span class="badge badge-energized work-logged">4h</span>
+                    <span class="badge badge-energized work-logged">{{issue.timeLoggedLabel}}</span>
                     <span class="badge badge-assertive">2h</span>
                 </ion-item>
-                <ion-item class="item-accordion" ng-repeat="item in group.items" ng-show="isGroupShown(group)">
+                <ion-item class="item-accordion" ng-show="isGroupShown(issue)">
                     <div class="button-bar">
-                        <a class="button button-energized btn-space">15m</a>
-                        <a class="button button-energized btn-space">1h</a>
-                        <a class="button button-energized btn-space">4h</a>
-                        <a class="button button-assertive btn-space">(-)1h</a>
-                        <a class="button button-assertive btn-space">(-)15m</a>
+                        <a class="button button-energized btn-space" ng-click="updateTimeLogged(issue,900)">15m</a>
+                        <a class="button button-energized btn-space" ng-click='updateTimeLogged(issue,3600)'>1h</a>
+                        <a class="button button-energized btn-space" ng-click='updateTimeLogged(issue,14400)'>4h</a>
+                        <a class="button button-assertive btn-space" ng-click='updateTimeLogged(issue,-3600)'>(-)1h</a>
+                        <a class="button button-assertive btn-space" ng-click='updateTimeLogged(issue,-900)'>(-)15m</a>
                     </div>
                 </ion-item>
             </div>
