--- a/public/templates/timesheet-detail.html
+++ b/public/templates/timesheet-detail.html
@@ -7,8 +7,8 @@
                     <i class="icon" ng-class="isGroupShown(issue) ? 'ion-chevron-up' : 'ion-chevron-down'"></i> &nbsp;
                     <i class="ion-bug"></i>&nbsp; {{issue.key}}
                     <button class="button button-small button-balanced icon-left ion-paper-airplane btn-log">Save</button>
-                    <span class="badge badge-energized work-logged">{{issue.timeLoggedLabel}}</span>
-                    <span class="badge badge-assertive">2h</span>
+                    <span class="badge badge-energized work-logged ">{{issue.timeLoggedLabel}}</span>
+                    <span class="badge badge-assertive work-available">2h 0m</span>
                 </ion-item>
                 <ion-item class="item-accordion" ng-show="isGroupShown(issue)">
                     <div class="button-bar">
