implement detail for each issue

--- a/public/templates/tab-setting.html
+++ b/public/templates/tab-setting.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Account">
+<ion-view view-title="Setting">
   <ion-content>
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
+    <ion-toggle  ng-model="settings.configuration">
         Enable Friends
     </ion-toggle>
     </ion-list>
