--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -1,4 +1,7 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
+    <ion-tab title="Settings" icon-off="ion-gear-a" icon-on="ion-gear-a" href="#/tab/setting">
+        <ion-nav-view name="tab-setting"></ion-nav-view>
+    </ion-tab>
     <!-- timesheet Tab -->
     <ion-tab title="TimeSheet" icon-off="ion-calendar" icon-on="ion-calendar" href="#/tab/timesheet">
         <ion-nav-view name="tab-timesheet"></ion-nav-view>
