--- a/public/templates/tab-logwork.html
+++ b/public/templates/tab-logwork.html
@@ -1,25 +1,29 @@
-<ion-header-bar class="bar-positive">
-    <h1 class="title">Accordion List</h1>
-</ion-header-bar>
-<ion-content>
-    <ion-list>
-        <div ng-repeat="group in groups">
-            <ion-item class="item-stable element-relative" ng-click="toggleGroup(group)" ng-class="{active: isGroupShown(group)}">
-                <i class="icon" ng-class="isGroupShown(group) ? 'ion-chevron-up' : 'ion-chevron-down'"></i> &nbsp;
-                <i class="ion-bug"></i>&nbsp; MANRMTOOLS- {{group.name}}254
-                <button class="button button-small button-balanced icon-left ion-paper-airplane btn-log">Save</button>
-                <span class="badge badge-energized work-logged">4h</span>
-                <span class="badge badge-assertive">2h</span>
-            </ion-item>
-            <ion-item class="item-accordion" ng-repeat="item in group.items" ng-show="isGroupShown(group)">
-                <div class="button-bar">
-                    <a class="button button-energized btn-space">15m</a>
-                    <a class="button button-energized btn-space">1h</a>
-                    <a class="button button-energized btn-space">4h</a>
-                    <a class="button button-assertive btn-space">(-)1h</a>
-                    <a class="button button-assertive btn-space">(-)15m</a>
-                </div>
-            </ion-item>
-        </div>
-    </ion-list>
-</ion-content>
+<!-- <ion-view view-title="{{chat.name}}"> -->
+<ion-view view-title="{{chat.name}}">
+    <ion-content class="padding">
+        <ion-list>
+            <div ng-repeat="issue in issues">
+                <ion-item class="item-stable element-relative" ng-click="toggleGroup(issue)" ng-class="{active: isGroupShown(issue)}">
+                    <i class="icon" ng-class="isGroupShown(issue) ? 'ion-chevron-up' : 'ion-chevron-down'"></i> &nbsp;
+                    <i class="ion-bug"></i>&nbsp; {{issue.key}}
+                    <button class="button button-small button-balanced icon-left ion-paper-airplane btn-log">Save</button>
+                    <span class="badge badge-energized work-logged ">{{issue.timeLoggedLabel}}</span>
+                    <span class="badge badge-assertive work-available">{{issue.timeSpent}}</span>
+                </ion-item>
+                <ion-item class="item-accordion" ng-show="isGroupShown(issue)">
+                    <div class="button-bar">
+                        <a class="button button-energized btn-space" ng-click="updateTimeLogged(issue,900)">15m</a>
+                        <a class="button button-energized btn-space" ng-click='updateTimeLogged(issue,3600)'>1h</a>
+                        <a class="button button-energized btn-space" ng-click='updateTimeLogged(issue,14400)'>4h</a>
+                        <a class="button button-assertive btn-space" ng-click='updateTimeLogged(issue,-3600)'>(-)1h</a>
+                        <a class="button button-assertive btn-space" ng-click='updateTimeLogged(issue,-900)'>(-)15m</a>
+                    </div>
+                </ion-item>
+            </div>
+        </ion-list>
+        <!-- <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
+        <p>
+            {{chat.lastText}}
+        </p> -->
+    </ion-content>
+</ion-view>
