--- a/public/templates/tab-setting.html
+++ b/public/templates/tab-setting.html
@@ -6,7 +6,7 @@
             </ion-toggle>
             <label class="item item-input item-stacked-label" ng-show='!settings.useCurrentUser'>
                 <span class="input-label">User name :</span>
-                <input type="text" placeholder="write a user name" ng-model='settings.userName'>
+                <input type="text" placeholder="write a user name" ng-model='settings.userName' style='text-transform: uppercase;'>
             </label>
             <ion-toggle ng-model="settings.useDefaultProject">
                 Show Defaul Project (RMTOOLS)
@@ -20,11 +20,11 @@
             </ion-toggle>
             <label class="item item-input item-stacked-label" ng-show='!settings.useDefaultDate'>
                 <span class="input-label">Fecha Inicio :</span>
-                <input type="date" placeholder="Escriba en formato MM/DD/YYY" ng-model='settings.startDate'>
+                <input type="text" placeholder="Escriba en formato MM/DD/YYY" ng-model='settings.startDate'>
             </label>
             <label class="item item-input item-stacked-label" ng-show='!settings.useDefaultDate'>
                 <span class="input-label">Fecha Final :</span>
-                <input type="date" format='mm/dd/yyyy' placeholder="Escriba en formato MM/DD/YYY" ng-model='settings.endDate'>
+                <input type="text" placeholder="Escriba en formato MM/DD/YYY" ng-model='settings.endDate'>
             </label>
             <!--   <label class="item item-input item-stacked-label">
                 <span class="input-label">Start Date :</span>
