Fix for user settings

--- a/public/templates/tab-setting.html
+++ b/public/templates/tab-setting.html
@@ -13,7 +13,7 @@
             </ion-toggle>
             <label class="item item-input item-stacked-label" ng-show='!settings.useDefaultProject'>
                 <span class="input-label">Project Name :</span>
-                <input type="text" placeholder="Write a project name" ng-model='settings.projectName'>
+                <input type="text" placeholder="Write a project name" ng-model='settings.projectName' style='text-transform: uppercase;'>
             </label>
             <ion-toggle ng-model="settings.useDefaultDate">
                 Show Defaul Date (Current Date + 10)
