--- a/public/templates/tab-timesheet.html
+++ b/public/templates/tab-timesheet.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Innsa Timesheet" ng-init='init()'>
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="worklog in worksLogs" type="item-text-wrap" href="#/tab/timesheet/{{worklog.key}}">
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="worklog in worksLogs" type="item-text-wrap" href="#/tab/timesheet/{{worklog.key}}" backcolor="{{worklog.timeSpentSeconds}}">
                 <img ng-src="{{worklog.userAvatar}}">
                 <h2>{{worklog.dayNumber}}</h2>
                 <p>{{worklog.date}}</p>
