change notifiy color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,3 +44,8 @@
     background: linear-gradient(to bottom right, #E8400B, rgba(147, 66, 48, 0));
     /* Standard syntax (must be last) */
 }
+
+
+/*.view-container {
+    display: initial !important;
+}*/
