--- a/public/templates/tab-setting.html
+++ b/public/templates/tab-setting.html
@@ -25,11 +25,7 @@
             <label class="item item-input item-stacked-label" ng-show='!settings.useDefaultDate'>
                 <span class="input-label">Fecha Final :</span>
                 <input type="text" placeholder="Escriba en formato MM/DD/YYY" ng-model='settings.endDate'>
-                <onezone-datepicker datepicker-object="onezoneDatepicker">
-                    <button class="button button-block button-outline button-positive show-onezone-datepicker">
-                        {{onezoneDatepicker.date | date:'dd MMMM yyyy'}}
-                    </button>
-                </onezone-datepicker>
+                <div pickadate ng-model="date" format="dd/mm/yyyy"></div>
                 <!--   <label class="item item-input item-stacked-label">
                 <span class="input-label">Start Date :</span>
                 <input type="text" place
